tests/type_sig_merge/async_void_return-import.js
import {f} from './async_void_return-export';

f() as empty; // error: Promise ~> empty
